testdata/ing5000-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "router~172.30.144.78~istio-ingressgateway-745fb4c9bf-nzzlx.istio-system~istio-system.svc.cluster.local",
     "cluster": "istio-ingressgateway",
     "metadata": {
      "ISTIO_META_INSTANCE_IPS": "172.30.144.78,172.30.144.78,fe80::5426:3eff:fe84:81ab",
      "POD_NAME": "istio-ingressgateway-745fb4c9bf-nzzlx",
      "istio": "sidecar",
      "CONFIG_NAMESPACE": "istio-system",
      "ISTIO_PROXY_VERSION": "1.1.0",
      "ISTIO_PROXY_SHA": "istio-proxy:1ae5ab2ce8a222021c1f1227c32490fabc20a6c6",
      "ISTIO_VERSION": "release-1.1-20190211-09-16",
      "ROUTER_MODE": "sni-dnat"
     },
     "locality": {},
     "build_version": "1ae5ab2ce8a222021c1f1227c32490fabc20a6c6/1.10.0-dev/Clean/RELEASE/BoringSSL"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "match": {
                  "prefix": "/stats/prometheus"
                 },
                 "route": {
                  "cluster": "prometheus_stats"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            },
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats"
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot",
          "port_value": 15011
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "tls_context": {
        "common_tls_context": {
         "tls_certificates": [
          {
           "certificate_chain": {
            "filename": "/etc/certs/cert-chain.pem"
           },
           "private_key": {
            "filename": "/etc/certs/key.pem"
           }
          }
         ],
         "validation_context": {
          "trusted_ca": {
           "filename": "/etc/certs/root-cert.pem"
          },
          "verify_subject_alt_name": [
           "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
          ]
         },
         "alpn_protocols": [
          "h2"
         ]
        }
       },
       "http2_protocol_options": {},
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin",
          "port_value": 9411
         }
        }
       ]
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_cluster": "zipkin",
       "trace_id_128bit": "true",
       "shared_span_context": "false",
       "collector_endpoint": "/api/v1/spans"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "_rq(_(\\d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "mongo_prefix",
       "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
      }
     ],
     "use_all_default_tags": false,
     "stats_matcher": {
      "inclusion_list": {
       "patterns": [
        {
         "prefix": "cluster_manager"
        },
        {
         "prefix": "listener_manager"
        },
        {
         "prefix": "http_mixer_filter"
        },
        {
         "prefix": "tcp_mixer_filter"
        },
        {
         "prefix": "server"
        },
        {
         "prefix": "cluster.xds-grpc"
        }
       ]
      }
     }
    }
   },
   "last_updated": "2019-02-12T05:44:09.315Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "version_info": "2019-02-12T10:53:56Z/24",
   "static_clusters": [
    {
     "cluster": {
      "name": "prometheus_stats",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2019-02-12T05:44:09.317Z"
    },
    {
     "cluster": {
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot",
         "port_value": 15011
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-pilot-service-account"
         ]
        },
        "alpn_protocols": [
         "h2"
        ]
       }
      },
      "http2_protocol_options": {},
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2019-02-12T05:44:09.319Z"
    },
    {
     "cluster": {
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin",
         "port_value": 9411
        }
       }
      ]
     },
     "last_updated": "2019-02-12T05:44:09.319Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "BlackHoleCluster",
      "connect_timeout": "1s"
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "ORIGINAL_DST_LB"
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15004_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15004_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15014_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15014_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15014_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15443_._.istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15443_._.istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.42422_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.42422_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.443_._.istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.443_._.kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.443_._.kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T10:48:34Z/17",
     "cluster": {
      "name": "outbound_.5000_._.istio-test.istio-apps.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.5000_._.istio-test.istio-apps.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T10:48:34.075Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.53_._.istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.53_._.istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.80_._.istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.9091_._.istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9091_._.istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.9091_._.istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9091_._.istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.452Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15014||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15014||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15014||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15014||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15014||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15014||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T10:48:34Z/17",
     "cluster": {
      "name": "outbound|5000||istio-test.istio-apps.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|5000||istio-test.istio-apps.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T10:48:34.074Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.451Z"
    },
    {
     "version_info": "2019-02-12T05:45:09Z/10",
     "cluster": {
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-02-12T05:45:10.450Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "version_info": "2019-02-12T10:53:56Z/24",
   "static_listeners": [
    {
     "listener": {
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats",
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "backend"
             }
            ]
           },
           "codec_type": "AUTO"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-02-12T05:44:09.321Z"
    }
   ],
   "dynamic_active_listeners": [
    {
     "version_info": "2019-02-12T10:53:48Z/23",
     "listener": {
      "name": "0.0.0.0_80",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "0.0.0.0_80",
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "http.80"
           },
           "http_filters": [
            {
             "name": "mixer",
             "typed_config": {
              "@type": "type.googleapis.com/istio.mixer.v1.config.client.HttpClientConfig",
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {}
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "istio-system"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-745fb4c9bf-nzzlx.istio-system"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-745fb4c9bf-nzzlx.istio-system"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://istio-ingressgateway-745fb4c9bf-nzzlx.istio-system"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "server_name": "istio-envoy",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "typed_config": {
              "@type": "type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog",
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% \"%DYNAMIC_METADATA(istio.mixer:status)%\" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "use_remote_address": true,
           "generate_request_id": true,
           "forward_client_cert_details": "SANITIZE_SET",
           "set_current_client_cert_details": {
            "subject": true,
            "dns": true,
            "uri": true
           },
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-02-12T10:53:48.803Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-02-12T05:44:09.321Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2019-02-12T10:53:56Z/24",
     "route_config": {
      "name": "http.80",
      "virtual_hosts": [
       {
        "name": "*:80",
        "domains": [
         "*",
         "*:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8000||istio-test.istio-apps.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted",
            "num_retries": 10,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "3",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/istio-apps/virtual-service/istio-test-virtualservice"
            }
           }
          },
          "decorator": {
           "operation": "istio-test.istio-apps.svc.cluster.local:8000/*"
          },
          "typed_per_filter_config": {
           "mixer": {
            "@type": "type.googleapis.com/istio.mixer.v1.config.client.ServiceConfig",
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-apps/services/istio-test"
              },
              "destination.service.host": {
               "string_value": "istio-test.istio-apps.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "istio-test"
              },
              "destination.service.namespace": {
               "string_value": "istio-apps"
              }
             }
            },
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-test.istio-apps.svc.cluster.local"
              },
              "destination.service.name": {
               "string_value": "istio-test"
              },
              "destination.service.namespace": {
               "string_value": "istio-apps"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-apps/services/istio-test"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-02-12T10:53:56.662Z"
    }
   ]
  }
 ]
}
